--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="cell" cell-data></div>
     </div>
     <div class="win-message" id="winMessage">
-        <div data-win-message></div>
-        <button id="restartBtn">Restart</button>
+      <div data-win-message-text></div>
+      <button id="restartBtn">Restart</button>
     </div>
   </body>
 </html>
