workin on a bug
need to figure out why it wont show message when win or draw

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <div class="board" id="board">
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
-      <div class="cell" cell-data></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
     </div>
     <div class="win-message" id="winMessage">
       <div data-win-message-text></div>
